--- a/HTML/pg110/task2/style.css
+++ b/HTML/pg110/task2/style.css
@@ -15,30 +15,6 @@ a {
     color: white;
 }
 
-.navbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    min-height: 40px;
-    background-color: #22A39F;
-}
-
-.navbar-el {
-    margin: 10px 20px;
-    padding: 10px;
-    text-decoration: none;
-    border-left: solid 1px white;
-    border-right: solid 1px white;
-    border-radius: 5px;
-    transition: .2s;
-}
-
-.navbar-el:hover {
-    border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
 .container {
     display: flex;
     flex-direction: column;
@@ -84,4 +60,44 @@ a {
 .block > img {
     margin-top: 10px;
     max-width: 200px;
+}
+
+.input-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    margin-bottom: 10px;
+}
+
+input {
+    border: none;
+    border-bottom: solid 1px gray;
+    padding: 4px;
+    font-size: 1.1em;
+    transition: .2s;
+    border-radius: 7px;
+}
+
+input:hover {
+    border-radius: 15px;
+    cursor: pointer;
+    border-bottom: solid 1px black;
+    box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.45);
+}
+
+.btn {
+    background-color: #5F8D4E;
+    color: white;
+    border: none;
+    padding: 10px;
+    transition: .2s;
+}
+
+.btn:hover {
+    border: none;
+    border-radius: 13px;
+    transform: translateY(-5px);
+    box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.45);
 }
