--- a/HTML/pg117/task2/style.css
+++ b/HTML/pg117/task2/style.css
@@ -21,7 +21,9 @@ a {
     justify-content: center;
     align-items: center;
     min-height: 40px;
-    background-color: #3282B8;
+    background-color: #0F4C75;
+    border-top-left-radius: none;
+    border-top-right-radius: none;
 }
 
 .navbar-el {
@@ -44,10 +46,20 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
-    width: 95vw;
-    max-width: 95vw;
-    margin: 25px auto;
+    width: 100vw;
+    max-width: 100vw;
+}
+
+.horizontal-block {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.horizontal-block > .block {
+    width: 50%;
+    margin-bottom: auto;
 }
 
 .block > p:nth-child(1) {
@@ -65,6 +77,7 @@ a {
     border-radius: 5px;
     text-align: center;
     width: auto;
+    border-top-left-radius: none;
 }
 
 .block > p > a {
@@ -73,17 +86,5 @@ a {
 
 .block > img {
     margin-top: 10px;
-    max-width: 100% !important;
-}
-
-.horizontal-block {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.horizontal-block > .block {
-    width: 50%;
-    margin-bottom: auto;
+    max-width: 200px;
 }
